Renaming Video Strip then scrubbing crashes (prefetching frames) #79757

Closed
opened 2020-08-13 21:01:10 +02:00 by james99 · 14 comments

System Information
Operating system: 5.3.0-62-generic #56~18.04.1-Ubuntu SMP Wed Jun 24 16:17:03 UTC 2020 x86_64 x86_64 x86_64 GNU/Linux
Graphics card: Intel UHD 620 GPU - lenovo x1 carbon 6th gen

Blender Version
Broken: Blender 2.83.4, Commit date: 2020-08-05 06:00, Hash c113af8288
Worked: not sure

Short description of error
Renaming a strip in the video editor crashes blender with a segfault

Exact steps for others to reproduce the error
Renaming a strip in the video editor (and then scrubbing) crashes blender with a segfault

Blender 2.83.4, Commit date: 2020-08-05 06:00, Hash c113af8288

bpy.context.scene.sequence_editor.sequences_all["ffff"].name = "ffff" # Property

backtrace

/snap/blender/43/blender(BLI_system_backtrace+0x1d) [0x6988dbd]
/snap/blender/43/blender() [0xc158a2]
/lib/x86_64-linux-gnu/libc.so.6(+0x3efd0) [0x7fbc1c914fd0]
/snap/blender/43/blender(BKE_sequencer_cache_put+0xe2) [0xe8f722]
/snap/blender/43/blender() [0xcf0d71]
/snap/blender/43/blender() [0xcf1a16]
/snap/blender/43/blender() [0xcf22b4]
/snap/blender/43/blender(BKE_sequencer_give_ibuf+0x119) [0xcf3979]
/snap/blender/43/blender() [0xea27af]
/lib/x86_64-linux-gnu/libpthread.so.0(+0x76db) [0x7fbc1e05a6db]
/lib/x86_64-linux-gnu/libc.so.6(clone+0x3f) [0x7fbc1c9f7a3f]

**System Information** Operating system: 5.3.0-62-generic #56~18.04.1-Ubuntu SMP Wed Jun 24 16:17:03 UTC 2020 x86_64 x86_64 x86_64 GNU/Linux Graphics card: Intel UHD 620 GPU - lenovo x1 carbon 6th gen **Blender Version** Broken: Blender 2.83.4, Commit date: 2020-08-05 06:00, Hash c113af82881a Worked: not sure **Short description of error** Renaming a strip in the video editor crashes blender with a segfault **Exact steps for others to reproduce the error** Renaming a strip in the video editor (and then scrubbing) crashes blender with a segfault # Blender 2.83.4, Commit date: 2020-08-05 06:00, Hash c113af82881a bpy.context.scene.sequence_editor.sequences_all["ffff"].name = "ffff" # Property # backtrace /snap/blender/43/blender(BLI_system_backtrace+0x1d) [0x6988dbd] /snap/blender/43/blender() [0xc158a2] /lib/x86_64-linux-gnu/libc.so.6(+0x3efd0) [0x7fbc1c914fd0] /snap/blender/43/blender(BKE_sequencer_cache_put+0xe2) [0xe8f722] /snap/blender/43/blender() [0xcf0d71] /snap/blender/43/blender() [0xcf1a16] /snap/blender/43/blender() [0xcf22b4] /snap/blender/43/blender(BKE_sequencer_give_ibuf+0x119) [0xcf3979] /snap/blender/43/blender() [0xea27af] /lib/x86_64-linux-gnu/libpthread.so.0(+0x76db) [0x7fbc1e05a6db] /lib/x86_64-linux-gnu/libc.so.6(clone+0x3f) [0x7fbc1c9f7a3f]
Author

Added subscriber: @james99

Added subscriber: @james99
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Cannot reproduce here.

I cannot reproduce this with either the latest stable or current development versions of Blender:
Please try the latest daily build: https://builder.blender.org/download/
Go to File → Defaults → Load Factory Settings and then load your file to see if you still can reproduce this issue.

If the problem persists, please share the .blend file where this happens.

Cannot reproduce here. I cannot reproduce this with either the latest stable or current development versions of Blender: Please try the latest daily build: https://builder.blender.org/download/ Go to File → Defaults → Load Factory Settings and then load your file to see if you still can reproduce this issue. If the problem persists, please share the .blend file where this happens.
Author

Hi Phillipp,

I just checked again and the error still occurs after resetting to Factory settings. Blender file attached. I will try the daily build later today.

It seems like a basic thing to break so severely, maybe something is wrong with my systems/drivers. Nevertheless, we might be able to produce a better error message for people with a similar problem in the future if we find out what is going on here :)

pithes.blend

Hi Phillipp, I just checked again and the error still occurs after resetting to Factory settings. Blender file attached. I will try the daily build later today. It seems like a basic thing to break so severely, maybe something is wrong with my systems/drivers. Nevertheless, we might be able to produce a better error message for people with a similar problem in the future if we find out what is going on here :) [pithes.blend](https://archive.blender.org/developer/F8779784/pithes.blend)
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Added subscriber: @iss

Added subscriber: @iss
Member

Ah, can reproduce now.
After renaming, I have to start scrubbing to cause the crash.

BKE_sequencer_prefetch_get_original_sequence cant get a sequence here

1 BKE_sequencer_cache_put    seqcache.c    1347 0x3678a8a      
2 seq_render_preprocess_ibuf sequencer.c   3884 0x33c3061      
3 seq_render_strip           sequencer.c   3911 0x33c316d      
4 seq_render_strip_stack     sequencer.c   4027 0x33c35ae      
5 BKE_sequencer_give_ibuf    sequencer.c   4124 0x33c3a11      
6 seq_prefetch_frames        seqprefetch.c 459  0x36928ff      
7 tslot_thread_start         threads.cc    226  0xb88ad90      
8 start_thread                                  0x7ffff7f61432 
9 clone                                         0x7ffff78cf913 

Reminds me of #79357 (Blender VES crashing when performing cuts in Video/Audio strips), D8421: Fix #79357: VSE crash on prefetching when performing cuts, D8256: Fix #78573: Crash when removing strips with prefetching

@iss: I think the same applies here? [in this case, stop prefetching when the strip name changes].
Dont have the time to look at that today, mind taking over?

Ah, can reproduce now. After renaming, I have to start scrubbing to cause the crash. `BKE_sequencer_prefetch_get_original_sequence` cant get a sequence here ``` 1 BKE_sequencer_cache_put seqcache.c 1347 0x3678a8a 2 seq_render_preprocess_ibuf sequencer.c 3884 0x33c3061 3 seq_render_strip sequencer.c 3911 0x33c316d 4 seq_render_strip_stack sequencer.c 4027 0x33c35ae 5 BKE_sequencer_give_ibuf sequencer.c 4124 0x33c3a11 6 seq_prefetch_frames seqprefetch.c 459 0x36928ff 7 tslot_thread_start threads.cc 226 0xb88ad90 8 start_thread 0x7ffff7f61432 9 clone 0x7ffff78cf913 ``` Reminds me of #79357 (Blender VES crashing when performing cuts in Video/Audio strips), [D8421: Fix #79357: VSE crash on prefetching when performing cuts](https://archive.blender.org/developer/D8421), [D8256: Fix #78573: Crash when removing strips with prefetching](https://archive.blender.org/developer/D8256) @iss: I think the same applies here? [in this case, stop prefetching when the strip name changes]. Dont have the time to look at that today, mind taking over?
Philipp Oeser changed title from Renaming Video Strip Crashes Blender on Ubuntu to Renaming Video Strip then scrubbing crashes (prefetching frames) 2020-08-14 11:36:42 +02:00

In #79757#995953, @lichtwerk wrote:
Ah, can reproduce now.
After renaming, I have to start scrubbing to cause the crash.

BKE_sequencer_prefetch_get_original_sequence cant get a sequence here

1 BKE_sequencer_cache_put    seqcache.c    1347 0x3678a8a      
2 seq_render_preprocess_ibuf sequencer.c   3884 0x33c3061      
3 seq_render_strip           sequencer.c   3911 0x33c316d      
4 seq_render_strip_stack     sequencer.c   4027 0x33c35ae      
5 BKE_sequencer_give_ibuf    sequencer.c   4124 0x33c3a11      
6 seq_prefetch_frames        seqprefetch.c 459  0x36928ff      
7 tslot_thread_start         threads.cc    226  0xb88ad90      
8 start_thread                                  0x7ffff7f61432 
9 clone                                         0x7ffff78cf913 

Reminds me of #79357 (Blender VES crashing when performing cuts in Video/Audio strips), D8421: Fix #79357: VSE crash on prefetching when performing cuts, D8256: Fix #78573: Crash when removing strips with prefetching

@iss: I think the same applies here? [in this case, stop prefetching when the strip name changes].
Dont have the time to look at that today, mind taking over?

Yes, it's same issue. I will go over all operators this time, just to get this issue over with

> In #79757#995953, @lichtwerk wrote: > Ah, can reproduce now. > After renaming, I have to start scrubbing to cause the crash. > > `BKE_sequencer_prefetch_get_original_sequence` cant get a sequence here > > ``` > 1 BKE_sequencer_cache_put seqcache.c 1347 0x3678a8a > 2 seq_render_preprocess_ibuf sequencer.c 3884 0x33c3061 > 3 seq_render_strip sequencer.c 3911 0x33c316d > 4 seq_render_strip_stack sequencer.c 4027 0x33c35ae > 5 BKE_sequencer_give_ibuf sequencer.c 4124 0x33c3a11 > 6 seq_prefetch_frames seqprefetch.c 459 0x36928ff > 7 tslot_thread_start threads.cc 226 0xb88ad90 > 8 start_thread 0x7ffff7f61432 > 9 clone 0x7ffff78cf913 > ``` > > Reminds me of #79357 (Blender VES crashing when performing cuts in Video/Audio strips), [D8421: Fix #79357: VSE crash on prefetching when performing cuts](https://archive.blender.org/developer/D8421), [D8256: Fix #78573: Crash when removing strips with prefetching](https://archive.blender.org/developer/D8256) > > @iss: I think the same applies here? [in this case, stop prefetching when the strip name changes]. > Dont have the time to look at that today, mind taking over? Yes, it's same issue. I will go over all operators this time, just to get this issue over with
Author

Let me know if there is anything else you need from me.

Do you have a suggestion for a workaround? Apart from not renaming clips, which I did yesterday.

Let me know if there is anything else you need from me. Do you have a suggestion for a workaround? Apart from not renaming clips, which I did yesterday.
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

In #79757#996272, @james99 wrote:
Do you have a suggestion for a workaround? Apart from not renaming clips, which I did yesterday.

Uncheck Prefetch Frames.
https://docs.blender.org/manual/en/latest/video_editing/preview/properties.html?highlight=prefetch

> In #79757#996272, @james99 wrote: > Do you have a suggestion for a workaround? Apart from not renaming clips, which I did yesterday. Uncheck `Prefetch Frames`. https://docs.blender.org/manual/en/latest/video_editing/preview/properties.html?highlight=prefetch

This issue was referenced by 4b69e55da3

This issue was referenced by 4b69e55da358cbfe98fd9ac85151a7107315959b

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2020-08-17 20:37:09 +02:00
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:25:41 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79757
No description provided.